# elasticsearch-stc-finance

./: Dockerfile  pyproject.toml
src/: main.py
src/modules/: elasticsearch.py  model.py  prompt.py
